Fixed ugly white gaps between feedback screenshot buttons

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -48,6 +48,8 @@ GtkEntry:insensitive {
 
 .blue_background {
     background: @kano_blue;
+    /* For Jessie, to remove default white box shadow */
+    box-shadow: inset 0 0, inset 0 0;
 }
 
 GtkEventBox.kano_button {
